# azure_deep_research

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  azure.yaml  pyproject.toml
.github/workflows/: ci.yml  deploy.yml
backend/: pyproject.toml
backend/prompts/: clarifier.md  final_report.md  lead_researcher.md  lead_researcher_round.md  report_writer.md  research_agent.md
backend/src/deep_research/: __init__.py  azure_client.py  clarifier.py  config.py  email.py  guardrails.py  keystore.py  lead.py  observability.py  pipeline.py  prompts.py  report.py  researcher.py  runtime.py  schemas.py  tools.py
backend/tests/: conftest.py  test_clarifier.py  test_keystore.py  test_lead.py  test_prompts.py  test_report.py  test_researcher.py  test_schemas.py
frontend/: app.py  pyproject.toml
infra/bicep/: main.bicep  main.parameters.json
infra/bicep/modules/: ai-foundry.bicep  bing-grounding.bicep  budget.bicep  communication.bicep  container-app.bicep  identity.bicep  key-vault.bicep  monitoring.bicep  registry.bicep  storage.bicep
utils/: add_user.py  mint_key.py  setup-github-oidc.sh  smoke.py  sync_agents.py
